force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AdminFeeCash__c.field-meta.xml
<CustomField>
    <fullName>AdminFeeCash__c</fullName>
    <label>AdminFeeCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>