force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AdminFeePrincipal__c.field-meta.xml
<CustomField>
    <fullName>AdminFeePrincipal__c</fullName>
    <label>AdminFeePrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>