force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AdminFeeTotal__c.field-meta.xml
<CustomField>
    <fullName>AdminFeeTotal__c</fullName>
    <label>AdminFeeTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>