force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AIClose__c.field-meta.xml
<CustomField>
    <fullName>AIClose__c</fullName>
    <label>AIClose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>