force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AIEarnings__c.field-meta.xml
<CustomField>
    <fullName>AIEarnings__c</fullName>
    <label>AIEarnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>