force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/AIOpen__c.field-meta.xml
<CustomField>
    <fullName>AIOpen__c</fullName>
    <label>AIOpen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>