force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Annual_Reporting_In_house_pl__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reporting_In_house_pl__c</fullName>
    <label>Annual Reporting In-house (pl)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>