force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Annual_Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reporting_Type__c</fullName>
    <label>Annual Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIIntermediate</fullName>
            </value>
            <value>
                <fullName>AILongTerm</fullName>
            </value>
            <value>
                <fullName>Endowed</fullName>
            </value>
            <value>
                <fullName>Expendable</fullName>
            </value>
            <value>
                <fullName>FHITend</fullName>
            </value>
            <value>
                <fullName>FHITexp</fullName>
            </value>
            <value>
                <fullName>TermEnd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>