force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ASG_Ask_Remove_Fund__c.field-meta.xml
<CustomField>
    <fullName>ASG_Ask_Remove_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose: to record if a fund is used for ASG solicitation purposes</description>
    <inlineHelpText>Check this box to exclude this fund from ASG solicitations</inlineHelpText>
    <label>ASG Ask Remove Fund</label>
    <type>Checkbox</type>
</CustomField>