force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ASG_Ask_Replace_Fund__c.field-meta.xml
<CustomField>
    <fullName>ASG_Ask_Replace_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Purpose: to record if a fund is used to replace another fund for ASG solicitation purposes</description>
    <inlineHelpText>Select the fund to use as a replacement for this removed fund</inlineHelpText>
    <label>ASG Ask Replace Fund</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or is not Active.</errorMessage>
        <filterItems>
            <field>ucinn_ascendv2__Designation__c.ucinn_ascendv2__Status_Formula__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Funds (ASG Ask Replace Fund)</relationshipLabel>
    <relationshipName>ASG_Ask_Replace_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>