force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ASG_Exclude__c.field-meta.xml
<CustomField>
    <fullName>ASG_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A manual override that essentially checks the ASG Production Exclusion and ASG Ask Remove Fund fields to TRUE</description>
    <inlineHelpText>A manual override that essentially checks the ASG Production Exclusion and ASG Ask Remove Fund fields to TRUE per Fund Created Updated Flow</inlineHelpText>
    <label>ASG Exclude</label>
    <type>Checkbox</type>
</CustomField>