force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ASG_Production_Exclusion_Fund__c.field-meta.xml
<CustomField>
    <fullName>ASG_Production_Exclusion_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose: to record if a fund is used for ASG production purposes</description>
    <inlineHelpText>Check this box to exclude this fund from ASG Production purposes</inlineHelpText>
    <label>ASG Production Exclusion Fund</label>
    <type>Checkbox</type>
</CustomField>