force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Ask_Replace_Fund_Formal_Title__c.field-meta.xml
<CustomField>
    <fullName>Ask_Replace_Fund_Formal_Title__c</fullName>
    <formula>ASG_Ask_Replace_Fund__r.ucinn_ascendv2__Designation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ask Replace Fund Formal Title</label>
    <type>Text</type>
</CustomField>