force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/BegCash__c.field-meta.xml
<CustomField>
    <fullName>BegCash__c</fullName>
    <label>BegCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>