force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/BegFHIT__c.field-meta.xml
<CustomField>
    <fullName>BegFHIT__c</fullName>
    <label>BegFHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>