force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/BegTotal__c.field-meta.xml
<CustomField>
    <fullName>BegTotal__c</fullName>
    <label>BegTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>