force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/CashLongTerm__c.field-meta.xml
<CustomField>
    <fullName>CashLongTerm__c</fullName>
    <label>CashLongTerm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>