force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/CashLTTotal__c.field-meta.xml
<CustomField>
    <fullName>CashLTTotal__c</fullName>
    <label>CashLTTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>