force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/CashPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CashPrincipal__c</fullName>
    <label>CashPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>