force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/CashTotal__c.field-meta.xml
<CustomField>
    <fullName>CashTotal__c</fullName>
    <label>CashTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>