force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Cognos_Financial_Reports__c.field-meta.xml
<CustomField>
    <fullName>Cognos_Financial_Reports__c</fullName>
    <formula>HYPERLINK(&apos;https://dw-prod-app-01.its.iastate.edu/ibmcognos/bi/?pathRef=.public_folders%2FISFND%2FFinancial%2BReports%2BC11%2FAccount%2BList&amp;action=run&amp;format=HTML&amp;prompt=false&amp;promptParameters=%5B%7B%22name%22%3A%22pDept%22%2C%22value%22%3A%5B%7B%22display%22%3A%22All%20Departments%22%2C%22use%22%3A%22All%22%7D%5D%7D%2C%7B%22name%22%3A%22pPurpose%22%2C%22value%22%3A%5B%7B%22display%22%3A%22All%20Purposes%22%2C%22use%22%3A%22All%22%7D%5D%7D%2C%7B%22name%22%3A%22pCollege%22%2C%22value%22%3A%5B%7B%22display%22%3A%22All%20Units%22%2C%22use%22%3A%22All%22%7D%5D%7D%2C%7B%22name%22%3A%22pAccount%22%2C%22value%22%3A%5B%7B%22display%22%3A%22&apos;&amp;Name&amp;&apos;%22%2C%22use%22%3A%22&apos;&amp;Name&amp;&apos;%22%7D%5D%7D%5D&apos;,&quot;View Cognos Financial Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cognos Financial Reports</label>
    <type>Text</type>
</CustomField>