force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ContrPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ContrPrincipal__c</fullName>
    <label>ContrPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>