force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ContrTotal__c.field-meta.xml
<CustomField>
    <fullName>ContrTotal__c</fullName>
    <label>ContrTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>