force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Current_Award_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Award_Year_Amount__c</fullName>
    <label>Current Award Year Amount</label>
    <summarizedField>Scholarship_Award__c.SCHLRSHP_AMT_AWARD__c</summarizedField>
    <summaryFilterItems>
        <field>Scholarship_Award__c.SCHLRSHP_SEM_CCYY__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Scholarship_Award__c.FUND_ACCT__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>