force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Custom_Annual_Reporting_Footnotes__c.field-meta.xml
<CustomField>
    <fullName>Custom_Annual_Reporting_Footnotes__c</fullName>
    <description>This field allows DCS to add custom footnote text to the fund that gets combined with any scholarship award footnotes on the donor contact row for all donor contacts associated with this fund.  This can be overridden in the donor contact row using the annual reporting footnote field. Final data is displayed in the &quot;full footnote&quot; field.</description>
    <label>Custom Annual Reporting Footnotes</label>
    <type>TextArea</type>
</CustomField>