force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Designation_Detail_Count__c.field-meta.xml
<CustomField>
    <fullName>Designation_Detail_Count__c</fullName>
    <label>Designation Detail Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>