force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Designation_Detail_Count_Text__c.field-meta.xml
<CustomField>
    <fullName>Designation_Detail_Count_Text__c</fullName>
    <formula>TEXT( Designation_Detail_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Detail Count Text</label>
    <type>Text</type>
</CustomField>