force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Donor_Issue_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Donor_Issue_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you have questions about this Donor Issue Tracking item please reach out to a member of the DCS unit</inlineHelpText>
    <label>Donor Issue Tracking</label>
    <type>Checkbox</type>
</CustomField>