force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EarningsPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EarningsPrincipal__c</fullName>
    <label>EarningsPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>