force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EarningsTotal__c.field-meta.xml
<CustomField>
    <fullName>EarningsTotal__c</fullName>
    <label>EarningsTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>