force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Encompass_ID__c.field-meta.xml
<CustomField>
    <fullName>Encompass_ID__c</fullName>
    <description>External id for designations in iModules</description>
    <externalId>true</externalId>
    <label>Encompass ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>