force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EndAIEnd__c.field-meta.xml
<CustomField>
    <fullName>EndAIEnd__c</fullName>
    <label>EndAIEnd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>