force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EndCash__c.field-meta.xml
<CustomField>
    <fullName>EndCash__c</fullName>
    <label>EndCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>