force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EndFHIT__c.field-meta.xml
<CustomField>
    <fullName>EndFHIT__c</fullName>
    <label>EndFHIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>