force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Endowed_Balance__c.field-meta.xml
<CustomField>
    <fullName>Endowed_Balance__c</fullName>
    <label>Endowed Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>