force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EndPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EndPrincipal__c</fullName>
    <label>EndPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>