force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/EndTotal__c.field-meta.xml
<CustomField>
    <fullName>EndTotal__c</fullName>
    <label>EndTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>