force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Expendable_Cash_Balance__c.field-meta.xml
<CustomField>
    <fullName>Expendable_Cash_Balance__c</fullName>
    <label>Expendable Cash Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>