force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_ActiveStatus__c.field-meta.xml
<CustomField>
    <fullName>FE_ActiveStatus__c</fullName>
    <label>FE Active Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>