force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_Program__c.field-meta.xml
<CustomField>
    <fullName>FE_Program__c</fullName>
    <label>FE Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>