force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_ProjectClosedDate__c.field-meta.xml
<CustomField>
    <fullName>FE_ProjectClosedDate__c</fullName>
    <label>FE Project Closed Date</label>
    <type>Date</type>
</CustomField>