force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_ProjectInactiveDate__c.field-meta.xml
<CustomField>
    <fullName>FE_ProjectInactiveDate__c</fullName>
    <label>FE Project Inactive Date</label>
    <type>Date</type>
</CustomField>