force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>FE_ProjectStartDate__c</fullName>
    <label>FE Project Start Date</label>
    <type>Date</type>
</CustomField>