force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FE_ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>FE_ProjectStatus__c</fullName>
    <label>FE Project Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>