force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITBeg__c.field-meta.xml
<CustomField>
    <fullName>FHITBeg__c</fullName>
    <label>FHITBeg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>