force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITEnd__c.field-meta.xml
<CustomField>
    <fullName>FHITEnd__c</fullName>
    <label>FHITEnd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>