force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITEndGL__c.field-meta.xml
<CustomField>
    <fullName>FHITEndGL__c</fullName>
    <label>FHITEndGL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>