force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITEndInc__c.field-meta.xml
<CustomField>
    <fullName>FHITEndInc__c</fullName>
    <label>FHITEndInc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>