force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITExpGL__c.field-meta.xml
<CustomField>
    <fullName>FHITExpGL__c</fullName>
    <label>FHITExpGL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>