force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITExpInc__c.field-meta.xml
<CustomField>
    <fullName>FHITExpInc__c</fullName>
    <label>FHITExpInc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>