force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/FHITTotInc__c.field-meta.xml
<CustomField>
    <fullName>FHITTotInc__c</fullName>
    <label>FHITTotInc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>