force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Annual_Financial_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_Annual_Financial_Report_Status__c</fullName>
    <inlineHelpText>When In-House is selected all related DC with a Report Type &quot;Annual Financial Report&quot; will be updated to In-House, as will any other Annual Financial Reports they should get for other funds.</inlineHelpText>
    <label>Fund Annual Financial Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>