force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Aspiration__c.field-meta.xml
<CustomField>
    <fullName>Fund_Aspiration__c</fullName>
    <label>Fund Aspiration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Challenges</fullName>
            </value>
            <value>
                <fullName>ISU Land-Grant Mission</fullName>
            </value>
            <value>
                <fullName>Student Experience</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>