force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Fund_Contributions__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009LuX9UAK/view?fv0=&apos;&amp; Id, &quot;View All Contributions to this Fund&quot;)</formula>
    <label>Fund Contributions</label>
    <type>Text</type>
</CustomField>