force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Description__c.field-meta.xml
<CustomField>
    <fullName>Fund_Description__c</fullName>
    <label>Fund Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>