force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Division__c.field-meta.xml
<CustomField>
    <fullName>Fund_Division__c</fullName>
    <description>Fund attribute primarily used for financial reports and required for Data Warehouse model</description>
    <label>Fund Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Affairs</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Operations and Finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provost</fullName>
            </value>
            <value>
                <fullName>Student Affairs</fullName>
            </value>
            <value>
                <fullName>University Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>