force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Group__c.field-meta.xml
<CustomField>
    <fullName>Fund_Group__c</fullName>
    <label>Fund Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Investments</fullName>
            </value>
            <value>
                <fullName>Alumni Association</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Expendable/Demand</fullName>
            </value>
            <value>
                <fullName>Gift Annuity</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>