force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Fund_Purpose__c</fullName>
    <label>Fund Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Report</fullName>
            </value>
            <value>
                <fullName>Alumni Association</fullName>
            </value>
            <value>
                <fullName>Captial Construction/Building</fullName>
            </value>
            <value>
                <fullName>Construction/building Projects</fullName>
            </value>
            <value>
                <fullName>Dean&apos;s Chair</fullName>
            </value>
            <value>
                <fullName>Department Head Chair</fullName>
            </value>
            <value>
                <fullName>Endowed Staff</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Faculty &amp; Staff Support</fullName>
            </value>
            <value>
                <fullName>Faculty and Staff Award</fullName>
            </value>
            <value>
                <fullName>Faculty and Staff Fellowships</fullName>
            </value>
            <value>
                <fullName>Faculty Chair</fullName>
            </value>
            <value>
                <fullName>Faculty Professorships</fullName>
            </value>
            <value>
                <fullName>Faculty Visiting Professorships</fullName>
            </value>
            <value>
                <fullName>Foundation Operation</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>Graduate Fellowships</fullName>
            </value>
            <value>
                <fullName>Graduate Scholarships</fullName>
            </value>
            <value>
                <fullName>Lectureships and Seminars</fullName>
            </value>
            <value>
                <fullName>Library Materials</fullName>
            </value>
            <value>
                <fullName>Museums Acquisitions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Student Support</fullName>
            </value>
            <value>
                <fullName>Physical Plant</fullName>
            </value>
            <value>
                <fullName>Program Support</fullName>
            </value>
            <value>
                <fullName>Project Support</fullName>
            </value>
            <value>
                <fullName>Public Serv. &amp; Extension</fullName>
            </value>
            <value>
                <fullName>Research - General</fullName>
            </value>
            <value>
                <fullName>Research - Organized</fullName>
            </value>
            <value>
                <fullName>Student Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>