force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Fund_Quarterly_Report__c.field-meta.xml
<CustomField>
    <fullName>Fund_Quarterly_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://isuf.lightning.force.com/lightning/r/Report/00O2E000009LvIBUA0/view?fv0=&apos;&amp; Id, &quot;View Fund Quarterly Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Quarterly Report</label>
    <type>Text</type>
</CustomField>