force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/fund_rview_attrb__c.field-meta.xml
<CustomField>
    <fullName>fund_rview_attrb__c</fullName>
    <description>Two letter code for fund review attribute  (eg. Scholarship - Full, Graduate Fellowship)</description>
    <label>Fund_ Review Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Faculty Fellowship</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Graduate Fellowship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Faculty Support</fullName>
            </value>
            <value>
                <fullName>Professorship</fullName>
            </value>
            <value>
                <fullName>Scholarship - Full</fullName>
            </value>
            <value>
                <fullName>Scholarship - Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>