force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Gift_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Gift_Fee_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Fee Indicator</label>
    <type>Checkbox</type>
</CustomField>