force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Income_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Income_Attribute__c</fullName>
    <label>Income Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Attribute</valueSetName>
    </valueSet>
</CustomField>