force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/is_Phone_Center_Visible__c.field-meta.xml
<CustomField>
    <fullName>is_Phone_Center_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Phone Center Visible</label>
    <type>Checkbox</type>
</CustomField>