force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Most_Recent_Fund_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Fund_Note__c</fullName>
    <label>Most Recent Fund Note</label>
    <summarizedField>Fund_Notes__c.Review_Date__c</summarizedField>
    <summaryForeignKey>Fund_Notes__c.Fund__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>