force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Open_Close_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Open_Close_Indicator__c</fullName>
    <label>Open/Close Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>