force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/OtherCash__c.field-meta.xml
<CustomField>
    <fullName>OtherCash__c</fullName>
    <label>OtherCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>