force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/OtherLT__c.field-meta.xml
<CustomField>
    <fullName>OtherLT__c</fullName>
    <label>OtherLT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>