force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/OtherPrincipal__c.field-meta.xml
<CustomField>
    <fullName>OtherPrincipal__c</fullName>
    <label>OtherPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>