force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/OtherTotal__c.field-meta.xml
<CustomField>
    <fullName>OtherTotal__c</fullName>
    <label>OtherTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>