force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Portal_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Display_Name__c</fullName>
    <formula>ucinn_ascendv2__Designation_Name__c + &quot; - &quot; + ucinn_ascendv2__X1_Academic_Org__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Display Name</label>
    <type>Text</type>
</CustomField>