force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Portal_Sort__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sort__c</fullName>
    <label>Portal Sort</label>
    <length>1</length>
    <type>Text</type>
</CustomField>